# IIM

./: .gitignore  CMakeLists.txt  README.md  auth_bearer.cpp  build.sh  main.cpp  user_info_cache.hpp
configs/: config_vars.yaml  static_config.yaml
logs/: logs.txt
schemas/postgresql/auth/: migrations.txt
schemas/postgresql/auth/migrations/: V001__create_db.sql
scripts/: apply_migrations.sh
src/: main.cpp
src/auth/: auth_bearer.cpp  user_info_cache.hpp
src/handlers/auth/: auth_bearer.cpp  auth_bearer.hpp  sign_in_up.cpp  sign_in_up.hpp  user_info_cache.hpp
src/handlers/handlers_for_test/: role_test_handlers.cpp  role_test_handlers.hpp
src/handlers/moderation/: moderation.cpp  moderation.hpp
src/handlers/review/: review.cpp  review.hpp
src/handlers/sign_in_up/: sign_in_up.cpp  sign_in_up.hpp
src/utils/: json_process.cpp  json_process.hpp  string_json_response.cpp  string_json_response.hpp
testsuite/: conftest.py  test_sign_in_up.py
